# trading-system-autotest

./: main.py  pyproject.toml  pytest.ini
base/: account_base.py  goods_base.py  home_base.py  iframe_baidu_map_base.py  left_menu_base.py  login_base.py  object_map.py  order_base.py
common/: common_filed_enum.py  find_img.py  mysql_operate.py  ocr_identify.py  report_add_img.py  tools.py  yaml_config.py
config/: driver_config.py  environment.yaml
logs/: log.py
page/: __init__.py  account_page.py  external_link_page.py  goods_page.py  home_page.py  iframe_baidu_map_page.py  left_menu_page.py  login_page.py  order_page.py
testcases/: conftest.py  selenium_test_waits.py  test_account.py  test_add_goods.py  test_home_page.py  test_iframe_baidu_map.py  test_jenkins.py  test_login.py  test_order.py  test_pytest_learn.py  test_switch_window_handle.py
testcases/functional/: __init__.py  test_ocr_identify.py
